--- a/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
@@ -79,6 +79,7 @@
     <Compile Include="JobHistory\JobHistorySummaryModelBuilderTests.cs" />
     <Compile Include="KeplerServiceLoggingTests.cs" />
     <Compile Include="KeplerServicePermissionTests.cs" />
+    <Compile Include="Repositories\ChoiceRepositoryTests.cs" />
     <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
     <Compile Include="Repositories\IntegrationPointTypeRepositoryTests.cs" />
     <Compile Include="Repositories\JobHistoryRepositoryTests.cs" />
