--- a/Source/kCura.IntegrationPoints.EventHandlers/kCura.IntegrationPoints.EventHandlers.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers/kCura.IntegrationPoints.EventHandlers.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Installers\RemoveUnusedEventHandlers.cs" />
     <Compile Include="Installers\SetIntegrationPointType.cs" />
     <Compile Include="IntegrationPoints\Helpers\IConsoleBuilder.cs" />
+    <Compile Include="IntegrationPoints\Helpers\IIntegrationPointTypeInstaller.cs" />
     <Compile Include="IntegrationPoints\Helpers\Implementations\ConsoleBuilder.cs" />
     <Compile Include="IntegrationPoints\Helpers\Implementations\FolderPathInformation.cs" />
     <Compile Include="IntegrationPoints\Helpers\IIntegrationPointViewPreLoad.cs" />
@@ -172,6 +173,7 @@
     <Compile Include="IntegrationPoints\Helpers\Implementations\IntegrationPointViewPreLoad.cs" />
     <Compile Include="IntegrationPoints\Helpers\Implementations\RelativityProviderConfiguration.cs" />
     <Compile Include="IntegrationPoints\Helpers\Implementations\RelativityProviderDestinationConfiguration.cs" />
+    <Compile Include="IntegrationPoints\Helpers\Implementations\IntegrationPointTypeInstaller.cs" />
     <Compile Include="IntegrationPoints\Helpers\IWorkspaceNameValidator.cs" />
     <Compile Include="IntegrationPoints\Helpers\IRelativityProviderConfiguration.cs" />
     <Compile Include="IntegrationPoints\Helpers\Implementations\RelativityProviderSourceConfiguration.cs" />
@@ -188,6 +190,7 @@
     <Compile Include="IntegrationPoints\IntegrationPointPreLoadEventHandler.cs" />
     <Compile Include="IntegrationPoints\IntegrationPointProfilePageInteractionEventHandler.cs" />
     <Compile Include="IntegrationPoints\IntegrationPointProfilePreLoadEventHandler.cs" />
+    <Compile Include="IntegrationPoints\IntegrationPointTypesMigrationEventHandler.cs" />
     <Compile Include="IntegrationPoints\Validators\IPreCascadeDeleteEventHandlerValidator.cs" />
     <Compile Include="Installers\RegisterDocumentTransferProvider.cs" />
     <Compile Include="Installers\RegisterFtpProvider.cs" />
