REL-110720 Expose Productions Method through IProductionManager - upgading Relativity libs to 9.4.394.58 adding OAuth new lib dependencies that are used by WinEDDS

--- a/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
+++ b/Source/kCura.IntegrationPoints.Agent/kCura.IntegrationPoints.Agent.csproj
@@ -160,6 +160,18 @@
       <HintPath>..\packages\$(Relativity_Toggles)\lib\net45\Relativity.Toggles.dll</HintPath>
       <Private>True</Private>
     </Reference>
+	<Reference Include="Relativity.OAuth2Client.IdentityModel">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.IdentityModel.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client.Interfaces">
+      <HintPath>..\packages\$(Relativity_OAuth2Client_Interfaces)\lib\net45\Relativity.OAuth2Client.Interfaces.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
