--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration/kCura.IntegrationPoints.FilesDestinationProvider.Tests.Integration.csproj
@@ -44,6 +44,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+	<Reference Include="Relativity.OAuth2Client.IdentityModel">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.IdentityModel.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client.Interfaces">
+      <HintPath>..\packages\$(Relativity_OAuth2Client_Interfaces)\lib\net45\Relativity.OAuth2Client.Interfaces.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
     <Reference Include="BCrypt.Net, Culture=neutral, PublicKeyToken=6bcd409ee6bc9292, processorArchitecture=MSIL">
       <HintPath>..\packages\$(BCrypt-Official)\lib\BCrypt.Net.dll</HintPath>
       <Private>True</Private>
