--- a/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
+++ b/Source/kCura.IntegrationPoints.Web/kCura.IntegrationPoints.Web.csproj
@@ -52,6 +52,18 @@
       <HintPath>..\packages\$(kCura_Apps_Common_Data)\lib\net45\kCura.Apps.Common.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
+	<Reference Include="Relativity.OAuth2Client.IdentityModel">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.IdentityModel.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client">
+      <HintPath>..\packages\$(Relativity_OAuth2Client)\lib\net45\Relativity.OAuth2Client.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
+	<Reference Include="Relativity.OAuth2Client.Interfaces">
+      <HintPath>..\packages\$(Relativity_OAuth2Client_Interfaces)\lib\net45\Relativity.OAuth2Client.Interfaces.dll</HintPath>
+	  <Private>True</Private>
+    </Reference>
     <Reference Include="kCura.Apps.Common.Utils, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\$(kCura_Apps_Common_Utils)\lib\net45\kCura.Apps.Common.Utils.dll</HintPath>
       <Private>True</Private>
