--- a/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
+++ b/Source/kCura.IntegrationPoints.Synchronizers.RDO/kCura.IntegrationPoints.Synchronizers.RDO.csproj
@@ -151,10 +151,8 @@
     </Compile>
     <Compile Include="ImportAPI\RelativityReaderDecorator.cs" />
     <Compile Include="RdoFieldSynchronizerBase.cs" />
-    <Compile Include="RdoSynchronizerPull.cs" />
     <Compile Include="IImportApiFactory.cs" />
     <Compile Include="IRelativityFieldQuery.cs" />
-    <Compile Include="RdoSynchronizerPush.cs" />
     <Compile Include="EmbeddedAssembly.cs" />
     <Compile Include="ImportApiFactory.cs" />
     <Compile Include="ImportOverlayBehaviorEnum.cs" />
@@ -167,7 +165,7 @@
     <Compile Include="ImportSettings.cs" />
     <Compile Include="NativeFileImportService.cs" />
     <Compile Include="RdoCustodianSynchronizer.cs" />
-    <Compile Include="RdoSynchronizerBase.cs" />
+    <Compile Include="RdoSynchronizer.cs" />
     <Compile Include="RelativityFieldQuery.cs" />
     <Compile Include="Properties\ErrorMessages.Designer.cs">
       <AutoGen>True</AutoGen>
