--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -226,10 +226,10 @@
     <Compile Include="Helpers\IArtifactTreeCreator.cs" />
     <Compile Include="Helpers\IButtonStateBuilder.cs" />
     <Compile Include="Helpers\IDirectoryTreeCreator.cs" />
-    <Compile Include="Helpers\IFolderTreeProvider.cs" />
+    <Compile Include="Helpers\IRelativePathDirectoryTreeProvider.cs" />
     <Compile Include="Helpers\Implementations\ButtonStateBuilder.cs" />
     <Compile Include="Helpers\Implementations\DirectoryTreeCreator.cs" />
-    <Compile Include="Helpers\Implementations\FolderTreeProvider.cs" />
+    <Compile Include="Helpers\Implementations\RelativePathDirectoryTreeProvider.cs" />
     <Compile Include="Helpers\Implementations\OnClickEventConstructor.cs" />
     <Compile Include="Helpers\Implementations\ArtifactTreeCreator.cs" />
     <Compile Include="Helpers\Implementations\SavedSearchesTreeCreator.cs" />
