--- a/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Managers\DocumentManagerTests.cs" />
     <Compile Include="Managers\IntegrationPointTypeManagerTests.cs" />
     <Compile Include="Managers\JobHistoryManagerTests.cs" />
+    <Compile Include="Managers\ProviderManagerTests.cs" />
     <Compile Include="Repositories\IntegrationPointProfileRepositoryTests.cs" />
     <Compile Include="Repositories\IntegrationPointRepositoryTests.cs" />
     <Compile Include="Repositories\IntegrationPointTypeRepositoryTests.cs" />
