--- a/Source/kCura.IntegrationPoints.EventHandlers/kCura.IntegrationPoints.EventHandlers.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers/kCura.IntegrationPoints.EventHandlers.csproj
@@ -151,6 +151,10 @@
       <HintPath>..\packages\$(RelativityCore)\lib\net45\Relativity.Services.DataContracts.dll</HintPath>
       <Private>True</Private>
     </Reference>
+	<Reference Include="SystemInterface, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\$(SystemWrapper_Interfaces)\lib\net45\SystemInterface.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Caching" />
