--- a/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Services.Tests/kCura.IntegrationPoints.Services.Tests.csproj
@@ -77,10 +77,9 @@
     <Compile Include="JobHistory\DestinationWorkspaceParserTests.cs" />
     <Compile Include="JobHistory\JobHistoryAccessTests.cs" />
     <Compile Include="JobHistory\JobHistorySummaryModelBuilderTests.cs" />
-    <Compile Include="KeplerServiceLoggingTests.cs" />
-    <Compile Include="KeplerServicePermissionTests.cs" />
     <Compile Include="Managers\DocumentManagerTests.cs" />
     <Compile Include="Managers\IntegrationPointManagerTests.cs" />
+    <Compile Include="Managers\IntegrationPointProfileManagerTests.cs" />
     <Compile Include="Managers\IntegrationPointTypeManagerTests.cs" />
     <Compile Include="Managers\JobHistoryManagerTests.cs" />
     <Compile Include="Managers\ProviderManagerTests.cs" />
