--- a/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
+++ b/Source/kCura.IntegrationPoints.EventHandlers.Tests.Integration/kCura.IntegrationPoints.EventHandlers.Tests.Integration.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Installers\RegisterDocumentTransferProviderTests.cs" />
     <Compile Include="Installers\SourceProvidersMigrationEventHandlerTests.cs" />
     <Compile Include="IntegrationPoints\ConsoleEventHandlerTests.cs" />
+    <Compile Include="IntegrationPoints\DataTransferMigrationTests.cs" />
     <Compile Include="ViewErrors.cs" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
