--- a/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
+++ b/Source/kCura.IntegrationPoints.Core.Tests/kCura.IntegrationPoints.Core.Tests.csproj
@@ -238,10 +238,12 @@
     <Compile Include="..\..\Version\AssemblyInfo.cs">
       <Link>AssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Factories\HelperFactoryTests.cs" />
     <Compile Include="Helpers\ButtonStateBuilderTests.cs" />
     <Compile Include="Helpers\MatchHelper.cs" />
     <Compile Include="Helpers\RelativePathDirectoryTreeProviderTests.cs" />
     <Compile Include="Helpers\SavedSearchesTreeTestHelper.cs" />
+    <Compile Include="Managers\FederatedInstanceManagerTests.cs" />
     <Compile Include="Managers\ResourcePoolManagerTests.cs" />
     <Compile Include="Managers\WorkspaceManagerTests.cs" />
     <Compile Include="Services\DataTransferLocationServiceTests.cs" />
